# lupyne

./: .gitignore  .hgignore  .hgtags  404.html  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.html  README.md  README.rst  README.txt  client.py  engine.py  great-docs.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  server.py  setup.cfg  setup.py  shippable.yml  sitemap.xml
.github/workflows/: build.yml  release.yml
cherrypylucene/: client.py  server.py
cherrypylucene/engine/: __init__.py  documents.py  indexers.py  queries.py  spatial.py
cherrypylucene/engine/spatial/: __init__.py
docs/: 0-index.qmd  1-examples.qmd  2-services.qmd  Makefile  README.html  client.rst  conf.py  engine.md  engine.rst  examples.ipynb  examples.rst  graphql.rst  html  index.md  index.rst  rest.rst  server.rst  services.md  utils.rst
docs/.build/html/: .buildinfo  client.html  engine.html  examples.html  genindex.html  index.html  modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  server.html
docs/.build/html/_sources/: client.txt  engine.txt  examples.txt  index.txt  server.txt
docs/.templates/: layout.html
docs/theme/: theme.conf
docs/theme/static/: theme.css_t
engine/: __init__.py  documents.py  index.html  indexers.py  queries.py  spatial.py
examples/: __init__.py  __main__.py  grouping.py  index.html  indexers.py  numeric.py  parallel.py  queries.py  searching.py  server.py  sorting.py  spatial.py
lupyne/: __init__.py  client.py  server.py  utils.py
lupyne/engine/: __init__.py  analyzers.py  documents.py  indexers.py  numeric.py  queries.py  spatial.py  utils.py
lupyne/engine/spatial/: __init__.py  globalmaptiles.py
lupyne/server/: __init__.py  __main__.py  base.py  graphql.py  legacy.py  rest.py
lupyne/services/: README.md  base.py  graphql.py  rest.py  settings.py
search/: search_index.json
services/: index.html
test/: __main__.py  distributed.py  local.py  remote.py
test/fixture/: __init__.py  constitution.txt  zipcodes.txt
tests/: conftest.py  requirements.in  server.py  test_distributed.py  test_engine.py  test_graphql.py  test_local.py  test_remote.py  test_rest.py  test_server.py
tests/fixtures/: __init__.py  constitution.graphql  constitution.txt
