[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lupyne"
dynamic = ["version"]
description = "Pythonic search engine based on PyLucene."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["lucene", "pylucene"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/lupyne"
Documentation = "https://coady.github.io/lupyne"

[project.optional-dependencies]
rest = ["fastapi"]
graphql = ["strawberry-graphql[asgi]>=0.84.4"]

[tool.setuptools]
packages = ["lupyne", "lupyne.engine", "lupyne.services"]

[tool.setuptools.dynamic]
version = {attr = "lupyne.__version__"}

[tool.setuptools.package-data]
lupyne = ["py.typed"]

[tool.black]
line-length = 120
skip-string-normalization = true

[[tool.mypy.overrides]]
module = ["lucene", "jcc", "java.*", "org.apache.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"

[tool.coverage.run]
source = ["lupyne"]
branch = true
omit = ["lupyne/server/*.py"]
