[metadata]
name = lupyne
version = attr: lupyne.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Pythonic search engine based on PyLucene.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/lupyne
license = Apache Software License
keywords = lucene, pylucene
project_urls =
    Documentation = https://coady.github.io/lupyne
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Indexing
    Typing :: Typed

[options]
zip_safe = False
packages = lupyne, lupyne.engine, lupyne.services
python_requires = >=3.7

[options.package_data]
lupyne = py.typed

[options.extras_require]
rest = fastapi
graphql = strawberry-graphql[asgi]>=0.73

[flake8]
ignore = E203,F402,W605
max-line-length = 120
exclude = .venv

[tool:pytest]
addopts = -p no:faulthandler

[coverage:run]
source = lupyne
branch = True
omit = lupyne/server/*.py

[mypy]

[mypy-lucene]
ignore_missing_imports = True

[mypy-jcc]
ignore_missing_imports = True

[mypy-java.*]
ignore_missing_imports = True

[mypy-org.apache.*]
ignore_missing_imports = True
